# QtTestApp

./: CMakeLists.txt
src/: CameraWidget.cpp  CameraWidget.h  main.cpp
